tests/preproc/define/fail003.ds
#define MACRO(  

#define MACRO( ,

#define MACRO(x y

#define MACRO(__va_args__)